# han-empire

./: .env.example  .gitignore  CHANGELOG.md  HanEmpireSim.spec  LICENSE  README.md  README_WINDOWS.md  TODO_phase4.md  UI_UPGRADE_PLAN.md  build.spec  build_windows.bat  han_empire.spec  launcher.py  main.py  pyproject.toml  run_windows.py  runtime_llm.json  server.py  version_info.txt  web_app.py
.claude/: CLAUDE.md  hookify.py3.6-compat.local.md
content/: armies.json  buildings.json  characters.json  classes.json  consorts.json  decrees.json  emperor_skills.json  events.json  intro_hints.json  opening_crises.json  opening_gazette.md  powers.json  regions.json  seed_events.json  seed_events.json.v5-precond-backup  skill_tools.json  skills.json  tech_definitions.json  tutorial_steps.json
data/: decision_log.json
docs/: DEVELOPMENT.md  HISTORY_SIMULATOR_RESEARCH_v3.0.md  SCREENSHOTS_v2.5.0.md  V31_RESEARCH_RAW.json  V32_RESEARCH_RAW.json  audit-v45-8d-report.md  audit-v49-preliminary.md  fix-v45-bugs-and-e2e-pass.md  game-bible-localization-plan.md  phaseA_v1.12.0_proposal.md  phaseB1_v1.13.1_proposal.md  phaseB_v1.13.0_proposal.md  phaseC_v1.14.0_proposal.md  phaseD_v1.15.0_proposal.md  phaseE_v1.16.0_proposal.md  phaseF_v1.17.0_proposal.md  phaseG_v1.18.0_proposal.md  product-plan.md  tools_transplant_plan.md  v2.0.0_proposal.md  v49-独立头像迁移方案.md  v49-生成任务清单.md  v5.0-竞品调研方案.md
han_sim/: agent_tools.py  agents.py  api_key_router.py  assets.py  auto_save.py  battle.py  budget.py  chronicle.py  civil_service.py  consequence_chain.py  constants.py  content.py  context.py  context_injector.py  conversation.py  court_debate.py  dag_query.py  db.py  decision_log.py  decree.py  decree_stream.py  decree_templates.py  diary.py  event_selector.py  exceptions.py  flows.py  flows_faction.py  image_gen.py  imperial_events.py  intro_hints.py  issues.py  issues_crisis.py  legacies.py  legacy_stats.py  llm_cache.py  llm_config.py  llm_contract.py  llm_model.py  llm_router.py  map_view.py  (+24 more)
scripts/: add_precondition_to_seed_events.py  auto_play_v51.py  build_exe.py  compress_images.py  do_ui_upgrade.py  e2e_test.py  find_return.py  gen_images_v52.py  gen_images_v55.py  generate_portraits.py  memory_recall_probe.py  military_flow_probe.py  upgrade_ui.py
tests/: conftest.py  test_auto_play_v515.py  test_budget_sync_v51.py  test_budget_v51.py  (+29 more)
(+195 files in other folders)
