[project]
name = "han-empire"
version = "5.1.4"
description = "汉献帝之末路 v5.1.4 - 借鉴崇祯模拟器 体验收口 (菜单页 + CSS 整合 + 国势详情弹窗)"
requires-python = ">=3.11"
dependencies = [
    "agno>=2.6.9",
    "aiofiles>=25.1.0",
    "flask>=3.1.0",
    "flask-cors>=5.0.0",
    "gradio>=6.15.2",
    "httpx>=0.28.1",
    "openai>=2.38.0",
    "sqlalchemy>=2.0.50",
    "pywebview>=5.5.1",
    "Pillow>=11.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.11.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["scripts"]

[tool.ruff]
line-length = 100
target-version = "py311"
