[project]
name = "han-empire"
version = "5.5.0"
description = "汉献帝之末路 v5.5.0 - 彻底代码审查 + UI/UX 整改 (法律合规清洗 + 仓库瘦身 + 大屏适配)"
requires-python = ">=3.11"
dependencies = [
    "agno>=2.6.9",
    "aiofiles>=25.1.0",
    "flask>=3.1.0",
    "flask-cors>=5.0.0",
    "gradio>=6.15.2",
    "httpx>=0.28.1",
    "openai>=2.38.0",
    "sqlalchemy>=2.0.50",
    "pywebview>=5.5.1",
    "Pillow>=11.1.0",
    # v5.3.0 P7-3: TTS 边缘服务
    "edge-tts>=6.1.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.11.0",
    # v5.2.0 P6-19: 桌面包打包
    "pyinstaller>=6.10.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["scripts"]

[tool.ruff]
line-length = 100
target-version = "py311"
